Updated module challange part2, adding hotel name

--- a/Vacation_Search.ipynb
+++ b/Vacation_Search.ipynb
@@ -626,13 +626,12 @@
     "hotel_df = clean_df[[\"City\", \"Country\", \"Max Temp\", \"Current Description\", \"Lat\", \"Lng\"]].copy()\n",
     "\n",
     "# 5b. Create a new column \"Hotel Name\"\n",
-    "hotel_df[\"Hotel Name\"] = \"\"\n",
-    "hotel_df.head(10)"
+    "hotel_df[\"Hotel Name\"] = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,26 +731,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e0863cf514146c29799bb0fe9fa7148",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 11a. Add a marker layer for each city to the map. \n",
     "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
